--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/gallery.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/gallery.html.twig
@@ -40,10 +40,10 @@ style="background-color:#3d5462"
                                 {% endfor %}
                             </div>
                             {% if gallery_items|length > 1 %}
-                                <a class="left carousel-control" href="#galleryCarousel" data-slide="prev">
+                                <a class="left carousel-control" href="#galleryCarousel" rel="nofollow" data-slide="prev">
                                     <span class="glyphicon glyphicon-chevron-left"></span>
                                 </a>
-                                <a class="right carousel-control" href="#galleryCarousel" data-slide="next">
+                                <a class="right carousel-control" href="#galleryCarousel" rel="nofollow" data-slide="next">
                                     <span class="glyphicon glyphicon-chevron-right"></span>
                                 </a>
                             {% endif %}
